# educelab-hpc

./: LICENSE  NOTICE  README.md  setup.cfg
.github/workflows/: publish.yml  test.yml
src/educelab/hpc/: lmod.py
src/tests/: test_semver.py
