[metadata]
name = educelab-module
version = 0.1.0
author = First Last
author_email = email@example.com
description = Module description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/educelab/templates/educelab-pymodule
download_url = https://gitlab.com/educelab/templates/educelab-pymodule
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Affero General Public License v3

[options]
package_dir =
    =src
packages = find_namespace:
install_requires = file: requirements.txt
python_requires = >=3.10

[options.packages.find]
where = src
include = educelab*
exclude = tests*

[options.entry_points]
console_scripts =
    el-hello-world = educelab.module.app.main:main