[metadata]
name = educelab-hpc
version = 0.2.2
author = Seth Parker
author_email = c.seth.parker@uky.edu
description = A Python module providing helper functions for working in HPC environments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/educelab/educelab-hpc
download_url = https://github.com/educelab/educelab-hpc
project_urls =
    Source = https://github.com/educelab/educelab-hpc
    Issues = https://github.com/educelab/educelab-hpc/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Affero General Public License v3

[options]
package_dir =
    =src
packages = find_namespace:
;install_requires = file: requirements.txt
python_requires = >=3.9

[options.packages.find]
where = src
include = educelab*
exclude = tests*

[options.extras_require]
dev =
    pytest>=7.0

[tool:pytest]
testpaths = src/tests
norecursedirs = venv build dist
